@@ -483,3 +483,7 @@
 
         * Fix the transit to launch the effect directly when elm_transit_go is called.
 
+2012-10-15  Prince Dubey Kumar <prince.dubey@samsung.com>
+
+        * Fix genlist reorder mode item not being resized on genlist resize.
+
